# numericalSimulationsGivenField

./: .gitignore  CMakeLists.txt  README.md  Simulations.cpp  Simulations.h  Test.cpp  Test.h  main.cpp
